--- a/Environment.html
+++ b/Environment.html
@@ -20,9 +20,9 @@
         </div>
         <div class= "Text">
         <a href="Stories.html"><button class="btns" > Stories</button></a> 
-            <button class="btns">Wild Life</button>
-            <button class="btns">Suggestions</button>
-            <button class="btns"> About Us</button>
+        <a href="WildLife.html"><button class="btns" > Wild Life</button></a> 
+        <a href="Suggestion.html"><button class="btns" > Suggestion</button></a> 
+        <a href="AboutUS.html"><button class="btns" > About Us</button></a> 
         </div>    
     </div>
   
