--- a/Environment.html
+++ b/Environment.html
@@ -14,15 +14,16 @@
 </style>
 <body>
    <div id="image">
-        <img src="Image.jpg" alt="" style="width:100%">
+        <img src="backgound.jpeg" width="1000" height="900"  alt="" style="width:100%">
         <div id="title">
-                <i>ENVIRONMENT</i> 
+             <i>ENVIRONMENT</i> 
         </div>
-        <div class= "Text">
-        <a href="Stories.html"><button class="btns" > Stories</button></a> 
-        <a href="WildLife.html"><button class="btns" > Wild Life</button></a> 
-        <a href="Suggestion.html"><button class="btns" > Suggestion</button></a> 
-        <a href="AboutUS.html"><button class="btns" > About Us</button></a> 
+        <div id= "buttons">
+        <a href="Stories.html"><button id="stories_btn" > Stories</button></a> 
+        <a href="WildLife.html"><button id="wild_btn" > Wild Life</button></a> 
+        <a href="Suggestion.html"><button id="suggest_btn" > Suggestion</button></a> 
+        <a href="AboutUs.html"><button id="about_btn">About Us</button></a>
+
         </div>    
     </div>
   
