--- a/Stories.html
+++ b/Stories.html
@@ -1,10 +1,22 @@
-<link rel="stylesheet" href="stories.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="stories.css">
+    <title>Document</title>
+</head>
+<body>
+    <div id="text-image">
+        <p>
+            <a href="n1.html">
+            <img border="0" alt="trh" src="https://www.irishtimes.com/polopoly_fs/1.3971869.1564488806!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" width=600" height="300" id="img">
+            </a>
+            <a href="n1.html" id="txt">Ethiopia plants over 350 million trees in a day, setting new world record</a>
+        </p>
+    </div>
+</body>
+</html>
 
-<div>
-    <p>
-        <a href="n1.html">
-        <img border="0" alt="trh" src="https://www.irishtimes.com/polopoly_fs/1.3971869.1564488806!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" width=600" height="300" id="img">
-        </a>
-        <a href="n1.html" id="text">Ethiopia plants over 350 million trees in a day, setting new world record</a>
-    </p>
-</div>
+
