--- a/Environment.html
+++ b/Environment.html
@@ -19,13 +19,12 @@
              <i>ENVIRONMENT</i> 
         </div>
         <div id= "buttons">
-        <a href="Stories.html"><button id="stories_btn" > Stories</button></a> 
-        <a href="WildLife.html"><button id="wild_btn" > Wild Life</button></a> 
-        <a href="Suggestion.html"><button id="suggest_btn" > Suggestion</button></a> 
-        <a href="AboutUs.html"><button id="about_btn">About Us</button></a>
-
+        <a href="Stories.html"><button id="stories_btn" >Tin tức</button></a> 
+        <a href="WildLife.html"><button id="wild_btn" >Khám phá</button></a> 
+        <a href="Suggestion.html"><button id="suggest_btn" >Gợi ý</button></a> 
+        <a href="AboutUs.html"><button id="about_btn">Về tác giả</button></a>
         </div>    
     </div>
-  s
+  
 </body>
 </html>
