--- a/Suggestion.html
+++ b/Suggestion.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <h1 id="action">HÀNH ĐỘNG NHỎ Ý NGHĨA LỚN</h1>
+    <h2>Hãy chung tay với chúng tôi để cứu lấy trái đất của chúng ta </h2>
+    <ul>
+        <li>CÁC VIỆC LÀM ĐỂ CÓ THỂ BẢO VỆ MÔI TRƯỜNG NGAY HÔM NAY</li>
+        <b>Địa chỉ</b>
+        <span>
+            <a href="https://moitruong.com.vn/phat-trien-ben-vung/bao-ve-moi-truong/10-hanh-dong-de-bao-ve-moi-truong-song-17411.htm" target="blank">click here!</a>
+            <a href="http://www.vacne.org.vn/10-hanh-dong-bao-ve-moi-truong-don-gian/25335.html" target="blank">and here</a>
+        </span>
+    </ul>
     <h1 id="ngos">CÁC TỔ CHỨC VỀ MÔI TRƯỜNG</h1>
     <ul>
         <li>
@@ -24,7 +34,7 @@
             <i>Tổng Cục Môi trường</i>
             <b>Địa chỉ</b>
             <span>
-                <a href=" http://vea.gov.vn">vea</a>
+                <a href=" http://vea.gov.vn " target="blank">vea</a>
             </span>
         </li>
         <img src="image3.jpg" width="900" height="400" alt="">
@@ -33,7 +43,7 @@
             <i>Quỹ  Môi trường toàn cầu</i>
             <b>Địa chỉ</b>
            <span>
-               <a href=" http://www.thegef.org/gef/">GEF</a>
+               <a href=" http://www.thegef.org/gef/" target="blank">GEF</a>
            </span>
         </li>   
         <img src="image4.jpg" width="900" height="400" alt="">
@@ -42,7 +52,7 @@
             <i>Chương trình Môi trường Liên Hiệp Quốc</i>
             <b>Địa chỉ</b>
             <span>
-                <a href="https://www.unenvironment.org/">UN Environment</a>
+                <a href="https://www.unenvironment.org/" target="blank">UN Environment</a>
             </span>    
         </li>
         <img src="https://scontent.fhan1-1.fna.fbcdn.net/v/t1.15752-9/67515236_930354650635306_5291575364244471808_n.png?_nc_cat=105&_nc_oc=AQnXiHlyhc_4OSSD2QlH-WGZKS1IkgpkW5IOoFqdcW2RtrRqso6VWVhkugkufpZvcS4&_nc_ht=scontent.fhan1-1.fna&oh=7113961e5d6f462499498b6c7e4a3a36&oe=5DE6B73B"  width="900" height="400" alt="">
@@ -52,7 +62,7 @@
         <i>Quỹ Quốc tế Bảo vệ Thiên nhiên</i>
         <b>Địa chỉ</b>
         <span>
-            <a href="http://vietnam.panda.org/">WWF</a>
+            <a href="http://vietnam.panda.org/" target="blank">WWF</a>
         </span>
     </li>
     <img src="https://scontent.fhan1-1.fna.fbcdn.net/v/t1.15752-9/67625380_2540091166037582_5862272360630976512_n.png?_nc_cat=110&_nc_oc=AQkp3ioa1cDGuNwTpeyvaiVXsrV8wPfM4gyJiEcr7C3A1jZaUYaCju6KCwB8zK6sQHc&_nc_ht=scontent.fhan1-1.fna&oh=d99f270b179e3f6cf53824858d3c8e16&oe=5DEE0026" width="900" height="400" alt="">
