--- a/n1.html
+++ b/n1.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="stories.css">
 </head>
 <body>
-    <p>
-        <img src="https://www.irishtimes.com/polopoly_fs/1.3971869.1564488806!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="">
-        <br>
+    
+    <img src="https://www.irishtimes.com/polopoly_fs/1.3971869.1564488806!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="qwd" id="n-img">
+    <p id="n">
         In a record-breaking day this week, at the Gulele Botanical Garden in Addis Ababa, Ethiopia launched an historic tree planting campaign. Over 350 million trees were planted in an ambitious move to counter the effects of deforestation and climate change.
         <br>
         The event is part of Ethiopian Prime Minister Abiy Ahmed’s Green Legacy Initiative. It aimed at planting 200 million trees in a single day in 1,000 sites across the country.
