--- a/Environment.html
+++ b/Environment.html
@@ -14,15 +14,15 @@
 </style>
 <body>
    <div id="image">
-        <img src="backgound.jpeg" width="1000" height="900"  alt="" style="width:100%">
+        <img src="https://media.giphy.com/media/yK0lgAQyic2yY/giphy.gif" width="1000" height="900"  alt="" style="width:100%">
         <div id="title">
              <i>ENVIRONMENT</i> 
         </div>
         <div id= "buttons">
-        <a href="Stories.html"><button id="stories_btn" >Tin tức</button></a> 
-        <a href="WildLife.html"><button id="wild_btn" >Khám phá</button></a> 
-        <a href="Suggestion.html"><button id="suggest_btn" >Gợi ý</button></a> 
-        <a href="AboutUs.html"><button id="about_btn">Về tác giả</button></a>
+        <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+        <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+        <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
         </div>    
     </div>
   
