--- a/n2.html
+++ b/n2.html
@@ -10,25 +10,40 @@
 <body>
 
     <img src="https://www.worldrecordacademy.com/mass/img/218116-b_largest_environmental_sustainability_lesson.jpg" alt="sdf" id="n-img">
-    <p id="n">
+    <div id="n-buttons">
+        <a href="Stories.html"><button id="stories_btn"> Stories</button></a>
+        <a href="WildLife.html"><button id="wild_btn"> Wild Life</button></a>
+        <a href="Suggestion.html"><button id="suggest_btn"> Suggestion</button></a>
+        <a href="AboutUs.html"><button id="about_btn">About Us</button></a>
+    </div>
+    <p id="n-txt">UAE sets Guinness record for 'Largest <br> Environmental Sustainability Lesson'</p>
+    <div id="n">
         Nearly 300 students in Abu Dhabi have participated in an interactive lecture on sustainability setting the Guinness World Record for the most-attended environmental sustainability lesson in the world.
         <br>
+        <p></p>
         The event was organised by the Zayed Future Energy Prize, an Abu Dhabi based organisation which awards $4 million in grants each year to sustainable energy innovators.
         <br>
+        <p></p>
         The lecture lasted for 30 minutes highlighting how young people from all around the world can contribute towards minimising energy poverty. The students were also challenged to come up with solutions for a more sustainable future.
         <br>
+        <p></p>
         The record was witnessed and confirmed by Samer Khallouf, official adjudicator from Guinness World Records who said: “No such records were set previously in the world wherein hundreds of students attended a large interactive lesson on environmental sustainability. This is the first time”.
         <br>
+        <p></p>
         The lesson was conducted by Illac Angelo Diaz, Executive Director of Liter of Light- a non-profit renewable energy organisation and winner of the Zayed Future Energy Prize in 2015.
         <br>
+        <p></p>
         When students were asked about how they can incorporate environmental protection in their everyday life, the answers spanned from “using less petrol and avoid unnecessary burning of fuel” to “strictly follow the principles of recycling and reuse”. 
         <br>
+        <p></p>
         Dr. Nawal Al Hosany, Director of Zayed Future Energy Prize, said: “Today’s gathering highlights the critical importance of youth in driving forward the renewable energy and sustainability conversation, and the power they have as change agents, now and for the future”.
         <br>
+        <p></p>
         Mohammad Bin Zayed, the Crown Prince of Abu Dhabi, commented: “Youth are central to the development of a sustainable future and to the continued progress of the UAE. The focus of this year’s Abu Dhabi Sustainability Week (ADSW) on youth will ensure they are equipped with the skills needed to maintain our momentum”.
         <br>
+        <p></p>
         The emirate will host this year’s sustainability week from 13- 20 January. 
-    </p>
+    </div>
     
 </body>
 </html>
