--- a/Suggestion.html
+++ b/Suggestion.html
@@ -12,12 +12,10 @@
     <h1 id="action">HÀNH ĐỘNG NHỎ Ý NGHĨA LỚN</h1>
     <h2>Hãy chung tay với chúng tôi để cứu lấy trái đất của chúng ta </h2>
     <ul>
-        <li>CÁC VIỆC LÀM ĐỂ CÓ THỂ BẢO VỆ MÔI TRƯỜNG NGAY HÔM NAY</li>
-        <b>Địa chỉ</b>
-        <span>
-            <a href="https://moitruong.com.vn/phat-trien-ben-vung/bao-ve-moi-truong/10-hanh-dong-de-bao-ve-moi-truong-song-17411.htm" target="blank">click here!</a>
-            <a href="http://www.vacne.org.vn/10-hanh-dong-bao-ve-moi-truong-don-gian/25335.html" target="blank">and here</a>
-        </span>
+        <a href="suggestion2.html" target="blank"><li><i>CÁC VIỆC LÀM ĐỂ CÓ THỂ BẢO VỆ MÔI TRƯỜNG NGAY HÔM NAY</i></li></a>
+        <!-- <span>
+            <a href="suggestion2.html" target="blank"></a>
+        </span> -->
     </ul>
     <h1 id="ngos">CÁC TỔ CHỨC VỀ MÔI TRƯỜNG</h1>
     <ul>
