--- a/suggestion2.html
+++ b/suggestion2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="suggestion2.css">
     <title>Document</title>
 </head>
 <body>
@@ -53,6 +54,22 @@
      <p></p>
      <b>6.Giữ gìn và trồng mới cây xanh</b>
      <p>Cây xanh hấp thụ khí carbon dioxide, ngăn xói mòn đất và cung cấp ổ sinh thái cho mọi sinh vật sống. Giữ gìn cây xanh bằng cách chọn những vật trang trí nội thất từ các chất liệu thân thiện với sinh thái như tre chẳng hạn. Đừng quá chạy theo mốt, hãy tìm những loại bàn ghế, tủ đựng quần áo bền như vậy vừa tiết kiệm tiền vừa không góp phần tăng lượng đồ phế thải vào môi trường.Ngoài ra việc trồng cây xanh còn có rất nhiều lợi ích khác như: Cung cấp bóng mát,oxi cho con người, điều hòa nhiệt dộ thế giới</p>
-     <img src="trongcay.jpg" alt="" width="600" height="400">
+     <img src="trongcay.jpg" alt="" width="600" height="409">
+     <p></p>
+     <b>7. Hạn chế sử dụng màng bọc thực phẩm</b>
+     <p>Màng bọc thực phẩm cũng xuất xứ từ nhựa, từ nilon, mà còn hại hơn túi nilon ở chỗ túi nilon bạn có thể giặt sạch và tái sử dụng, nhưng màng bọc thực phẩm thì chỉ có thể dùng 1 lần rồi vứt đi, không thể tái chế hay tái sử dụng. 
+
+        Nhiều nhà bây giờ có thói quen dùng màng bọc thực phẩm bọc thức ăn mặc dù đôi khi không cần thiết. Chúng ta có thể thay đổi bằng cách sử dụng lồng bàn đan từ tre nứa, kim loại hoặc cất thức ăn vào hộp.
+        
+        Ngoài ra, chúng ta cũng hạn chế mua các loại thực phẩm chế biến sẵn trong siêu thị hay cửa hàng tiện lợi, vì hầu hết đều được đựng trong hộp nhựa không thể tái chế và sử dụng màng bọc thực phẩm.</p>
+        <img src="mangboc.jpg" alt="" width="600" height="409">
+        <p></p>
+        <b>8. Không dùng mỹ phẩm chứa hạt vi nhựa</b>
+        <p>Các loại mỹ phẩm và sản phẩm chăm sóc vệ sinh cá nhân như sữa rửa mặt, sữa tẩy tế bào da chết, kem đánh răng thường chứa những hạt vi nhựa. Đó là những hạt lấp lánh, li ti, được quảng cáo là giúp massage, tẩy tế bào hay cuốn trôi mảng bám. Nhưng bạn có biết đa phần trong số chúng là những mảnh cực nhỏ của nhựa?
+
+        Hạt vi nhựa – microbeads – là những hạt nhựa có đường kính nhỏ hơn 1mm. Khi bạn sử dụng những sản phẩm có hạt vi nhựa, chúng được rửa trôi thẳng xuống cống và chảy ra sông hồ, ao biển…ngay cả ở những nước tiên tiến các loại máy lọc nước thải cũng bỏ qua những hạt vi nhựa này vì chúng quá nhỏ. Những hạt vi nhựa trôi nổi trên đại dương có thể hấp thụ và tập trung những chất thải độc hại từ biển. Vì vậy mà chúng được ví như những viên thuốc độc nhỏ xíu trôi nổi trên biển và đầu độc những loài động vật ăn phải chúng. Khi theo chuỗi thức ăn vào cơ thể con người, chúng làm ảnh hưởng đến hệ nội tiết, phổi, hệ miễn dịch và có khả năng gây ra ung thư. Vậy nên, hãy chắc chắn bạn không sử dụng sản phẩm có những hạt vi nhựa này nhé.</p>
+        <img src="mipham.jpg" alt="" width="600" height="409">
+        <h2><i>Như vậy, chỉ bằng những hành động nhỏ ngay ngày hôm nay là bạn đã góp công sức vào nhiệm vụ quan trọng của nhân loại. Còn rất rất nhiều việc nhỏ khác mà chúng ta có thể làm cho trái đất. Chỉ cần chúng ta có ý thức bảo vệ môi trường và tìm hiểu những nguyên nhân cụ thể, chúng ta sẽ ngay lập tức tìm được giải pháp trong chính cuộc sống hàng ngày. </i></h2>
+
 </body>
 </html>
