Tiger and Panda update

--- a/WildLife.html
+++ b/WildLife.html
@@ -11,7 +11,7 @@
     <h1>Khám Phá</h1>
     <div>
         <a href="Panda.html"><button id="panda_btn" >Gấu Trúc</button></a> 
-
+        <a href="Tiger.html"><button id="tiger_btn" >Hổ</button></a> 
     </div>
 </body>
 </html>
