--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
         <li>Tên viết tắt của Chương trình Môi trường Liên Hiệp Quốc</li>
         <li>Đây là một loại vật chất đóng vai trò quan trọng trong cuộc sống hàng ngày của con người</li>
       </ul>
-
+      <h4><i>Hi vọng bạn có thể hiểu và chung tay cùng chúng tôi chia sẻ thông điệp này cho mọi người để giúp cho môi trường ngày một xanh-sạch-đẹp !! </i></h4>
     </div>
     <div id="crossword">
       <div id="cross-row0">
@@ -200,6 +200,7 @@
           required="required" value="" onkeyup='skipToNext(this);' tabindex="37" />
       </div>
     </div>
+    <div id="crossword">
     <div class="cross-row" id="cross-row6">
       <span class="empty-letter"></span>
       <span class="empty-letter"></span>
@@ -230,8 +231,10 @@
         required="required" value="" onkeyup='skipToNext(this);' tabindex="44" />
     </div>
 
+
   </div>
-  <div class="cross-row" id="cross-row7">
+  <div id="crossword">
+  <div class="cross-row" id="cross-row7" >
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -266,7 +269,8 @@
       value="" onkeyup='skipToNext(this);' tabindex="53" />
   </div>
 
-  </div>
+</div>
+<div id="crossword">
   <div class="cross-row" id="cross-row8">
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -295,6 +299,7 @@
   </div>
 
   </div>
+  <div id="crossword">
   <div class="cross-row" id="cross-row9">
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -339,6 +344,7 @@
   </div>
 
   </div>
+  <div id="crossword">
   <div class="cross-row" id="cross-row10">
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -364,6 +370,7 @@
   </div>
 
   </div>
+  <div id="crossword">
   <div class="cross-row" id="cross-row11">
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -387,6 +394,7 @@
       value="" onkeyup='skipToNext(this);' tabindex="80" />
   </div>
   </div>
+  <div id="crossword">
   <div class="cross-row" id="cross-row12">
     <span class="empty-letter"></span>
     <span class="empty-letter"></span>
@@ -410,6 +418,8 @@
       value="" onkeyup='skipToNext(this);' tabindex="84" />
     <input class="crossword-letter" type="text" minlength="1" maxlength="1" pattern="^[A-Za-z]{1}$" required="required"
       value="" onkeyup='skipToNext(this);' tabindex="85" />
+    
+    
 
     <button id="submit_crossword">CHECK CROSSWORD</button>
   </div>
