--- a/n1.html
+++ b/n1.html
@@ -9,47 +9,35 @@
 </head>
 <body>
     
-    <img src="https://www.irishtimes.com/polopoly_fs/1.3971869.1564488806!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="qwd" id="n-img">
-    <div id="n-buttons">
-        <a href="Stories.html"><button id="stories_btn"> Stories</button></a>
-        <a href="WildLife.html"><button id="wild_btn"> Wild Life</button></a>
-        <a href="Suggestion.html"><button id="suggest_btn"> Suggestion</button></a>
-        <a href="AboutUs.html"><button id="about_btn">About Us</button></a>
+    <img src="https://i.khoahoc.tv/photos/image/2019/08/14/nang-nong-o-alaska.jpg" alt="" id="n-img">
+    <p id="n-txt">Bang lạnh nhất Mỹ nóng kỷ lục, <br> băng trên biển tan chảy hoàn toàn</p>
+    <div id="buttons">
+        <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+        <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+        <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
     </div>
-    <p id="n-txt">Ethiopia plants over 350 million trees day, <br> setting new world record</p>
     <div id="n">
-        In a record-breaking day this week, at the Gulele Botanical Garden in Addis Ababa, Ethiopia launched an historic tree planting campaign. Over 350 million trees were planted in an ambitious move to counter the effects of deforestation and climate change.
+        <b>Khu vực bang Alaska của Mỹ mới trải qua đợt nắng nóng nhất trong 125 năm qua, khiến lớp băng trên biển biến mất hoàn toàn, tiềm ẩn nguy cơ gây ra thảm họa.</b>
         <br>
         <p></p>
-        The event is part of Ethiopian Prime Minister Abiy Ahmed’s Green Legacy Initiative. It aimed at planting 200 million trees in a single day in 1,000 sites across the country.
+        Theo Guardian, Alaska đã trải qua đợt nắng nóng kỷ lục trong tháng 7, khiến băng trên biển, trong phạm vi 240km ngoài khơi, tan chảy hoàn toàn.
         <br>
         <p></p>
-        Prime Minister Ahmed congratulated the country for not only meeting its collective Green Legacy goal but also exceeding it.
+        Ước tính trước đây cho thấy, có 75.000km2 ở Alaska được bao phủ hoàn toàn bằng các dòng sông băng. Hiện tượng băng tan còn gây ảnh hưởng đến cả vùng biển xung quanh Alaska.
         <br>
-        Ethiopia's Minister of Innovation and Technology Getahun Mekuria was quoted saying that more than 350 million trees were planted in 12 hours, breaking the world record held by India since 2016, for the most trees planted in one day and which stood at 50 million trees.
-        <br>
-        <p></p>
-        The tree planting event was attended by a representative of the UN Environment Programme’s Liaison Office to Africa Union Commission, UN Economic Commission for Africa and representative to Ethiopia, and whose support for this ambitious action was crucial, as well as other United Nations Agencies and various international organizations
+        Nhiệt độ trung bình trong tháng 7 của Alaska là 14,5 độ C, cao hơn 0,5 độ so với mức kỷ lục năm 2004. Ở nhiều thành phố, thị trấn thuộc Alaska, mức nhiệt độ ghi nhận cao kỷ lục trong 125 năm.
         <br>
         <p></p>
-        The initiative aims to tackle the effects of deforestation and climate change in the country. The United Nations estimates that Ethiopia’s forest coverage has declined drastically to a low of just 4 per cent in the 2000s from 35 per cent a century earlier.
+        Walt Meier, nhà nghiên cứu khoa học cao cấp tại Trung tâm Dữ liệu Băng Tuyết Mỹ, nói nguyên nhân là do tình trạng ấm lên kéo dài tại Bắc Cực, khiến sau mỗi năm, nhiệt độ ở khu vực lại nhích thêm một chút.
         <br>
         <p></p>
-        “Afforestation is the most effective climate change solution to date and with the new record set by Ethiopia, other African nations should move with speed and challenge the status quo,” said Juliette Biao Koudenoukpo, Director of UN Environment’s Africa Office.  
+        Việc băng tan chảy ở Alaska được dự báo sẽ đẩy nhanh tốc độ nóng lên của Bắc Cực và toàn cầu. Lớp băng đóng vai trò phản chiếu lại lượng nhiệt tác động đến môi trường.
         <br>
         <p></p>
-        “Africa has what it takes to spearhead this global push and as the most affected and vulnerable continent, climate change mitigation must be the topmost priority in the coming days. We at UN Environment are taking the lead in helping to build capacity for nations and people to apply themselves to afforestation and climate change mitigation strategies,” she added.
+        Việc băng tan chảy ở Alaska được dự báo sẽ đẩy nhanh tốc độ nóng lên của Bắc Cực và toàn cầu. Lớp băng đóng vai trò phản chiếu lại lượng nhiệt tác động đến môi trường.
         <br>
         <p></p>
-        Trees provide many ecosystem services and environmental benefits for the planet as a whole. As they grow, they absorb and store carbon dioxide—a major driver of global heating. In a scientific paper published in the Science magazine, researchers estimate that a worldwide tree planting programme could remove two thirds of all the emissions that have been pumped into the atmosphere as a result of human activities.
-        <br>
-        <p></p>
-        Researchers found that tree restoration was among the most effective strategies for climate change mitigation. They show that the global potential tree coverage stands at 4.4 billion hectares of canopy under the current climate. Planting trees is therefore considered the biggest and cheapest way to tackle the climate crisis.
-        <br>
-        <p></p>
-        Many African countries have recently engaged in massive tree planting campaigns including Kenya who has recently, with support from the UN Environment Programme, launched the “Greening Kenya Initiative” to reverse the declining forest cover.
-        <br>
-        <p></p>
-        UN Environment Programme is working with countries across the continent to replicate such initiatives to stop deforestation and increase forest cover. This is crucial in honoring African countries’ commitments to mitigate climate change and contribute to the achievement of the
+        Chúng ta đang chứng kiến hết kỷ lục này đến kỷ lục khác”, nhà khoa học khí hậu, Marco Tedesco ở Đại học Columbia,  nói. “Tình trạng băng tan hiện nay nhanh hơn 30-40 năm so với những dự đoán trước đây. Hậu quả cũng tồi tệ hơn nhưng rất khó đoán”.
     </div>
 </html>
