--- a/n2.html
+++ b/n2.html
@@ -9,40 +9,43 @@
 </head>
 <body>
 
-    <img src="https://www.worldrecordacademy.com/mass/img/218116-b_largest_environmental_sustainability_lesson.jpg" alt="sdf" id="n-img">
-    <div id="n-buttons">
-        <a href="Stories.html"><button id="stories_btn"> Stories</button></a>
-        <a href="WildLife.html"><button id="wild_btn"> Wild Life</button></a>
-        <a href="Suggestion.html"><button id="suggest_btn"> Suggestion</button></a>
-        <a href="AboutUs.html"><button id="about_btn">About Us</button></a>
+    <img src="https://media.tuoitrethudo.com.vn/files/nonghoaichau/2019/08/01/2-1804.jpg" alt="sdf" id="n-img">
+    <div id="buttons">
+        <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+        <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+        <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+        <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
     </div>
-    <p id="n-txt">UAE sets Guinness record for 'Largest <br> Environmental Sustainability Lesson'</p>
+    <p id="n-txt">Ethiopia lập kỷ lục trồng 350 triệu cây xanh trong một ngày</p>
     <div id="n">
-        Nearly 300 students in Abu Dhabi have participated in an interactive lecture on sustainability setting the Guinness World Record for the most-attended environmental sustainability lesson in the world.
+        <b>Ethiopia lập kỷ lục trồng trên 200 triệu cây xanh trong một ngày</b> 
         <br>
         <p></p>
-        The event was organised by the Zayed Future Energy Prize, an Abu Dhabi based organisation which awards $4 million in grants each year to sustainable energy innovators.
+        Sáng kiến đầy tham vọng của Thủ tướng Abiy Ahmed nhằm giúp khôi phục lại cảnh quan của đất nước vốn bị tàn phá nặng nề trong những thập kỷ qua khiến tỷ lệ rừng tại đất nước này giảm mạnh. Các chuyên gia cho rằng, rừng Ethiopia đang bị xói mòn nhanh chóng bởi nạn phá rừng và biến đổi khí hậu.
         <br>
         <p></p>
-        The lecture lasted for 30 minutes highlighting how young people from all around the world can contribute towards minimising energy poverty. The students were also challenged to come up with solutions for a more sustainable future.
+        Hưởng ứng sáng kiến, người dân Ethiopia đã trồng hơn 200 triệu cây vào thứ hai, ngày 30/7. Các quan chức nước này tuyên bố, đây sẽ là một kỷ lục thế giới.
         <br>
         <p></p>
-        The record was witnessed and confirmed by Samer Khallouf, official adjudicator from Guinness World Records who said: “No such records were set previously in the world wherein hundreds of students attended a large interactive lesson on environmental sustainability. This is the first time”.
+        Trên thực tế, Công ty Phát thanh truyền hình Fana trực thuộc nhà nước đã công bố trên 224 triệu cây xanh được trồng, vượt qua mục tiêu con số ban đầu là 200 triệu cây trồng trong một ngày.
         <br>
         <p></p>
         The lesson was conducted by Illac Angelo Diaz, Executive Director of Liter of Light- a non-profit renewable energy organisation and winner of the Zayed Future Energy Prize in 2015.
         <br>
         <p></p>
-        When students were asked about how they can incorporate environmental protection in their everyday life, the answers spanned from “using less petrol and avoid unnecessary burning of fuel” to “strictly follow the principles of recycling and reuse”. 
+        "Hôm nay (tức ngày 30/7), Ethiopia đã nỗ lực trồng cây và phá vỡ kỷ lục thế giới để có một di sản xanh", Văn phòng Thủ tướng viết trên Twitter.
         <br>
         <p></p>
-        Dr. Nawal Al Hosany, Director of Zayed Future Energy Prize, said: “Today’s gathering highlights the critical importance of youth in driving forward the renewable energy and sustainability conversation, and the power they have as change agents, now and for the future”.
+        Sáng thứ hai, Thủ tướng Abiy đã trồng cây ở khu vực phía Nam của Ethiopia, khởi đầu cho chiến dịch trồng bốn tỷ cây xanh trong khoảng từ tháng 5 đến tháng 10.
         <br>
         <p></p>
-        Mohammad Bin Zayed, the Crown Prince of Abu Dhabi, commented: “Youth are central to the development of a sustainable future and to the continued progress of the UAE. The focus of this year’s Abu Dhabi Sustainability Week (ADSW) on youth will ensure they are equipped with the skills needed to maintain our momentum”.
+        Các quan chức nông nghiệp Ethiopia tuyên bố, cho đến nay hơn 2,6 tỷ cây đã được trồng ở hầu hết các khu vực của quốc gia Đông Phi này.
         <br>
         <p></p>
-        The emirate will host this year’s sustainability week from 13- 20 January. 
+        Theo Farm Africa, một tổ chức liên quan đến quản lý rừng ở Ethiopia, tỷ lệ phủ xanh của Ethiopia đã giảm mạnh từ cuối thế kỷ XIX, từ 30% xuống còn 4%. Nguyên nhân rừng biết mất nhanh chóng ở châu Phi được đưa ra là do bùng nổ dân số dẫn tới tăng nhu cầu sử dụng đất nông nghiệp và nạn phá rừng, biến đổi khí hậu toàn cầu.
+        <br>
+        <p></p>
+        Ethiopia không phải là nước đầu tiên tìm cách tăng năng suất trồng cây trong một ngày. Hồi năm 2017, Ấn Độ đã lập kỷ lục với thành tích trồng 66 triệu cây. Tuy nhiên, hiện tổ chức kỷ lục thế giới vẫn chưa xác nhận thành tích lần này của Ethiopia.
     </div>
     
 </body>
