--- a/n3.html
+++ b/n3.html
@@ -5,33 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="stories.css">
 </head>
 <body>
 
-   <img src="https://www.unenvironment.org/sites/default/files/styles/article_billboard_image/public/2019-08/elephant-3426522_1920.jpg?itok=Fd-cAToa" alt="w" id="n-img">
-    <p>
-    Nairobi, 2 August 2019 ­– In a fresh effort to raise awareness and curb the illegal trade in ivory, Kenya yesterday launched a new wildlife conservation campaign dubbed “Ivory Trade is a Rip Off”.
-    <br>
-    The campaign calls for the listing of the African Elephant in Appendix I of the Convention on International Trade in Endangered Species of Wild Fauna and Flora (CITES) – which includes species threatened with extinction – at the Convention’s upcoming 18th Conference of the Parties (CoP18) following the dwindling numbers of elephants as a result of poaching.
-    <br>
-    It is supported by 31 other African states under the African Elephant Coalition.
-    <br>
-    The launch, which took place at Nairobi’s Jomo Kenyatta International Airport, was attended by the Director of UN Environment’s Regional Office for Africa, Juliette Biao, the country’s Cabinet Secretary for Tourism and Wildlife, Najib Balala, and representatives from Kenya Wildlife Service (KWS), Kenya Airports Authority (KAA) and Kenya Airways.
-    <br>
-    “We are worried – with the lobbying that is going on and opening the ivory trade – that poaching could be revived, because there will be a demand and supply,” said Cabinet Secretary Najib Balala. “And that is why we are here today, to bring this awareness.”
-    <br>
-    CITES introduced the ban on international trade in ivory in 1989 following years of unprecedented poaching; up to 80 per cent of herds are estimated to have been lost in some regions.
-    <br>
-    “The Kenya Airport Authority was the first in Africa to sign the United Buckingham Palace Declaration, an international initiative that commits players in the international transport supply chain to collaborate in the fight against the wildlife trafficking,” KAA’s Isaac Awuondo said at the launch. “We moved quickly to join in the fight against illegal wildlife trafficking out of the realization that a complex transnational supply chain was enabling this vice and it needed to be disrupted, if not eliminated.”
-    <br>
-    “Illegal Trade in Wildlife harms sustainable development in Africa. Together we can reverse the trend and protect our wildlife. I urge all stakeholders to join this campaign to eliminate this scourge,” Director of UN Environment’s Regional Office for Africa, Juliette Biao.
-    <br>
-    Through a partnership between KWS and KAA, Jomo Kenyatta International Airport is equipped with canine units trained to detect wildlife products in passenger baggage and cargo. KAA has been at the forefront in its commitment to the fight against Illegal wildlife trafficking by enacting laws, developing policies and procedures and training personnel to ensure that illegal wildlife products do not pass through airports.
-    <br>
-    As part of the campaign, 400,000 limited-edition boarding passes have been produced with the message: “Trade of ivory is ripping Kenya apart”.
-    <br>
-    Kenya Airways and UN Environment have jointly been raising awareness on the need for better and sustainable wildlife conservation by distributing a special children’s education pack to passengers. The pack contains a tote bag, a comic book, postcards, stickers and temporary tattoos relating to wildlife conservation and the illegal wildlife trade. UN Environment supports African countries in their fight against illegal trade in wildlife through awareness raising, policies as well as capacity building and support to local communities.Kenya Airways and UN Environment have jointly been raising awareness on the need for better and sustainable wildlife conservation by distributing a special children’s education pack to passengers. The pack contains a tote bag, a comic book, postcards, stickers and temporary tattoos relating to wildlife conservation and the illegal wildlife trade. UN Environment supports African countries in their fight against illegal trade in wildlife through awareness raising, policies as well as capacity building and support to local communities.
-    </p>
-
+    <img src="https://www.unenvironment.org/sites/default/files/styles/article_billboard_image/public/2019-08/elephant-3426522_1920.jpg?itok=Fd-cAToa" alt="w" id="n-img">
+    <p id="n-txt">Kenya thúc giục cấm buôn bán ngà voi</p>
+    <div id="buttons">
+            <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+            <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+            <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+            <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        </div>
+    <div id="n">
+        <b>BVR&MT – Phát biểu tại buổi ra mắt chính thức của Chiến dịch nâng cao nhận thức của CITES COP 18, được tổ chức ở địa điểm đốt ngà voi trong VQG Nairobi, Đệ nhất phu nhân Kenya Margaret Kenyatta tái khẳng định nước này thúc giục việc đóng cửa tất cả các thị trường buôn bán ngà voi trên toàn thế giới.</b> 
+        <br>    
+        <p></p>
+        Bà cho biết Kenya sẽ tiếp tục chiến dịch chống lại việc mở lại thị trường cho các chiến lợi phẩm săn bắn, đặc biệt là ngà voi. Chiến dịch này được 31 quốc gia châu Phi trong nhóm Liên minh Voi châu Phi (AEC) yểm trợ.
+        <br>
+        <p></p>
+        “Hôm nay, chúng ta đang vận động và kiến nghị đóng cửa tất cả các thị trường ngà voi và mạnh dạn ủng hộ việc đưa voi lên Phụ lục 1 của Công ước CITES”, Đệ nhất phu nhân, người bảo trợ cho chiến dịch “Hands Off Our Elephants”, nhấn mạnh.
+        <br>
+        <p></p>
+        “Đây là thông điệp mà chúng ta, với tư cách là một quốc gia, với tư cách là nhà bảo tồn, các bên liên quan và là thành viên của Liên minh Voi châu Phi, cùng cam kết trước cuộc họp của Công ước CITES COPE 18”
+        <br>
+        <p></p>
+        Đệ nhất phu nhân cho biết mỗi khi một đề xuất được đưa ra với mục đích mở lại một phần thị trường buôn bán ngà voi, nhu cầu tăng vọt sẽ kéo theo nạn săn trộm gia tăng. Việc mở lại thị trường buôn bán ngà voi sẽ phá hủy nhanh thành tựu bảo tồn trong những năm qua.
+        <br>
+        <p></p>
+        Kể từ năm 1989, Kenya đã bốn lần đốt kho dự trữ sừng ngà và sừng tê giác khổng lồ, lần phá hủy cuối cùng như vậy được Tổng thống Uhuru Kenyatta chủ trì vào năm 2016, đã phá hủy 105 tấn ngà voi và một tấn sừng tê giác.
+        <br>
+        <p></p>
+        Theo Đệ nhất phu nhân, Kenya đã đưa ra nhiều cơ chế để giảm thiểu nạn săn trộm và buôn bán trái phép ngà voi như giám sát trên không chặt chẽ hơn quanh các khu bảo tồn, xây dựng các biện pháp thực thi pháp luật và răn đe mạnh mẽ tại các cảng và sân bay.
+        <br>
+        <p></p>
+        Hãng hàng không quốc gia Kenya Airlines cũng tuyên bố triển khai chiến dịch nâng cao nhận thức bảo tồn toàn cầu bằng cách sử dụng thẻ lên máy bay có thương hiệu đặc biệt.
+        <br>
+        <p></p>
+        Chủ tịch HĐQT Kenya Airlines Michael Joseph cho biết chiến dịch sẽ bắt đầu từ tháng 8. Thẻ lên máy bay có thương hiệu đặc biệt sẽ có địa chỉ email và trang web cho khách hàng và các đối tác có thể nhận được thông tin hỗ trợ bảo vệ động vật hoang dã.
+    </div>
 </body>
 </html>
