--- a/Suggestion.html
+++ b/Suggestion.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="suggestion.css">
+    <link rel="stylesheet" href="stories.css">
     <title>Suggestion</title>
 </head>
-
+<div id="image">
+        <img src="topimg.jpg" alt="euhf" height="150" width="100%">
+        <div id="title">
+            <i>ENVIRONMENT</i>
+        </div>
+        <div id="buttons">
+            <a href="Stories.html" target="__blank"><button id="stories_btn" ><i>Tin tức</i></button></a> 
+            <a href="WildLife.html" target="__blank"><button id="wild_btn" ><i>Khám phá</i></button></a> 
+            <a href="Suggestion.html" target="__blank"><button id="suggest_btn" ><i>Gợi ý</i></button></a> 
+            <a href="AboutUs.html" target="__blank"><button id="about_btn"><i>Về tác giả</i></button></a>
+        </div>
+    </div>
 <body>
+        
     <h1 id="action">HÀNH ĐỘNG NHỎ Ý NGHĨA LỚN</h1>
     <h2>Hãy chung tay với chúng tôi để cứu lấy trái đất của chúng ta </h2>
     <ul>
